Incluyo todos los archivos del socket + esqueleto del server al cmkae
Signed-off-by: Tomas Fabrizio Orsi <torsi@fi.uba.ar>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,11 @@ set(CLIENTDIR src/client)
 ## Ejecutable del server
 add_executable(server
   "${SERVERDIR}/main.cpp"
+  "${SERVERDIR}/aceptador.cpp"
+  "${SERVERDIR}/server.cpp"
+  "${COMMONDIR}/liberror.cpp"
+  "${COMMONDIR}/resolver.cpp"
+  "${COMMONDIR}/socket.cpp"
 )
 
 
