--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,8 @@ add_executable(server
   "${SERVERDIR}/main.cpp"
   "${SERVERDIR}/aceptador.cpp"
   "${SERVERDIR}/server.cpp"
+
+  "${COMMONDIR}/resolvererror.cpp"
   "${COMMONDIR}/liberror.cpp"
   "${COMMONDIR}/resolver.cpp"
   "${COMMONDIR}/socket.cpp"
