Anado la base del cliente a cmake
Signed-off-by: Tomas Fabrizio Orsi <torsi@fi.uba.ar>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,9 +34,10 @@ add_executable(server
   "${COMMONDIR}/socket.cpp"
 )
 
-
-
-
+## Ejecutable del cliente
+# add_executable(cliente
+#   "${CLIENTDIR}/main.cpp"
+# )
 
 
 
