Anado el binario del cliente a gitignore ANTES de que lo hayamos generado. Cerero galaxia
Signed-off-by: Tomas Fabrizio Orsi <torsi@fi.uba.ar>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,7 @@ add_executable(server
 )
 
 ## Ejecutable del cliente
-# add_executable(cliente
+# add_executable(client
 #   "${CLIENTDIR}/main.cpp"
 # )
 
