Creo el directorio client con un hola mundo. En teoria la estructura basica esta lista
Signed-off-by: Tomas Fabrizio Orsi <torsi@fi.uba.ar>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,10 +34,10 @@ add_executable(server
   "${COMMONDIR}/socket.cpp"
 )
 
-## Ejecutable del cliente
-# add_executable(client
-#   "${CLIENTDIR}/main.cpp"
-# )
+#Ejecutable del cliente
+add_executable(client
+  "${CLIENTDIR}/main.cpp"
+)
 
 
 
