Anado los archivos de protocolo server
Signed-off-by: Tomas Fabrizio Orsi <torsi@fi.uba.ar>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,7 @@ add_executable(server
   # "${SERVERDIR}/recibidor.cpp"
   "${SERVERDIR}/server.cpp"
   "${SERVERDIR}/cliente.cpp"
+  "${SERVERDIR}/protocolo.cpp"
 
   # Socket
   "${COMMONDIR}/resolvererror.cpp"
