Lógica básica de cliente
Se implementó una lógica muy básica de cliente. Se utilizarán 4 hilos:

- Un hilo principal que se encargará del ciclo de dibujado del juego.
- Un hilo de recepción, que recibe estados de juego desde el servidor.
- Un hilo de envío, para enviar comandos del jugador al servidor.
- Un hilo de entrada de teclado, que recibirá las teclas presionadas y las traducirá en comandos, los cuales serán enviados al loop principal localmente o al servidor a través del hilo de envío.

Aún no se conecta con un servidor, sólo simula el comportamiento de actualización de estado de juego localmente.
La entrada de teclado está hecha sobre el mismo loop principal provisoriamente. Esto se pasará al hilo correspondiente una vez implementado SDL.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,9 @@ add_executable(server
 #Ejecutable del cliente
 add_executable(client
   "${CLIENTDIR}/main.cpp"
+  "${CLIENTDIR}/entradateclado.cpp"
+  "${CLIENTDIR}/enviador.cpp"
+  "${CLIENTDIR}/recibidor.cpp"
 )
 
 
