Ahora compila y esta todo Faltaba anadirlo al CMake.
JAJAJAJJAJAJAJAJAJJAJA QUE GRACIOSO JAJAJJJ GRACIAS CMAKE JAJAJAJJAJAJAJAJAJJAJA
ARCHIVO A ARCHIVO DECIAN JAJAJAJJAJAJAJAJAJJAJA
no.

Signed-off-by: Tomas Fabrizio Orsi <torsi@fi.uba.ar>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,9 @@ add_executable(server
   # "${SERVERDIR}/recibidor.cpp"
   "${SERVERDIR}/server.cpp"
   "${SERVERDIR}/cliente.cpp"
+  "${SERVERDIR}/jugador.cpp"
+  "${SERVERDIR}/partida.cpp"
+
   "${SERVERDIR}/protocolo.cpp"
 
   # Socket
