--- a/.github/workflows/cmake-single-platform-release.yml
+++ b/.github/workflows/cmake-single-platform-release.yml
@@ -24,8 +24,8 @@ jobs:
 
     - name: Install SDL2
       run: |
-        sudo apt-get update
-        sudo apt-get install libjpeg-dev libpng-dev libfreetype-dev libopusfile-dev libflac-dev libxmp-dev libfluidsynth-dev libwavpack-dev cmake libmodplug-dev libsdl2-dev
+        sudo apt-get update -y
+        sudo apt-get install -y libjpeg-dev libpng-dev libfreetype-dev libopusfile-dev libflac-dev libxmp-dev libfluidsynth-dev libwavpack-dev cmake libmodplug-dev libsdl2-dev
         git clone https://github.com/libsdl-org/SDL.git --branch release-2.26.5
         cd SDL
         mkdir build
@@ -69,7 +69,7 @@ jobs:
         sudo make install
         cd ../../
         sudo rm -rf libSDL2pp
-        
+
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
