--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -26,8 +26,8 @@ jobs:
 
     - name: Install SDL2
       run: |
-        sudo apt-get update
-        sudo apt-get install libjpeg-dev libpng-dev libfreetype-dev libopusfile-dev libflac-dev libxmp-dev libfluidsynth-dev libwavpack-dev cmake libmodplug-dev libsdl2-dev
+        sudo apt-get update -y
+        sudo apt-get install -y libjpeg-dev libpng-dev libfreetype-dev libopusfile-dev libflac-dev libxmp-dev libfluidsynth-dev libwavpack-dev cmake libmodplug-dev libsdl2-dev
         git clone https://github.com/libsdl-org/SDL.git --branch release-2.26.5
         cd SDL
         mkdir build
