--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -24,53 +24,64 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Install SDL2
+    - name: Install dependencies
       run: |
-        sudo apt-get update -y
-        sudo apt-get install -y libjpeg-dev libpng-dev libfreetype-dev libopusfile-dev libflac-dev libxmp-dev libfluidsynth-dev libwavpack-dev cmake libmodplug-dev libsdl2-dev
+        sudo apt-get update
+        sudo apt-get install -y \
+          libjpeg-dev libpng-dev libfreetype-dev libopusfile-dev libflac-dev libxmp-dev libfluidsynth-dev libwavpack-dev cmake libmodplug-dev libsdl2-dev
+
+    - name: Build and install SDL2
+      run: |
         git clone https://github.com/libsdl-org/SDL.git --branch release-2.26.5
         cd SDL
         mkdir build
         cd build
-        cmake .. && make -j4
+        cmake ..
+        make -j4
         sudo make install
-        cd ../../
-        sudo rm -rf SDL
-        cd SDL_image
+
+    - name: Build and install SDL2_image
+      run: |
         git clone --branch release-2.6.3 https://github.com/libsdl-org/SDL_image.git
+        cd SDL_image
         git checkout SDL2
         mkdir build
         cd build
-        cmake .. && make -j4
+        cmake ..
+        make -j4
         sudo make install
-        cd ../../
-        sudo rm -rf SDL_image
+
+    - name: Build and install SDL2_mixer
+      run: |
         git clone --branch release-2.6.3 https://github.com/libsdl-org/SDL_mixer.git
         cd SDL_mixer
         git checkout SDL2
         mkdir build
         cd build
-        cmake .. && make -j4
+        cmake ..
+        make -j4
         sudo make install
-        cd ../../
-        sudo rm -rf SDL_mixer
+
+    - name: Build and install SDL2_ttf
+      run: |
         git clone --branch release-2.20.2 https://github.com/libsdl-org/SDL_ttf.git
         cd SDL_ttf
         git checkout SDL2
         mkdir build
         cd build
-        cmake .. && make -j6
+        cmake ..
+        make -j4
         sudo make install
-        cd ../../
-        sudo rm -rf SDL_ttf
+
+    - name: Build and install sdl2pp
+      run: |
         git clone https://github.com/libSDL2pp/libSDL2pp.git --branch 0.18.1
         cd libSDL2pp
         mkdir build
         cd build
-        cmake .. && make -j6
+        cmake ..
+        make -j4
         sudo make install
-        cd ../../
-        sudo rm -rf libSDL2pp
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
