--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -57,3 +57,13 @@ jobs:
 
       run: sh ./build/grepearTodos.sh
 
+  cppcheck:
+    runs-on: self-hosted
+
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Corremos cppcheck. Cppcheck es solo una herramienta. Ni dioses ni reyes - Andrew Ryan
+
+      run: sh ./build/cppcheck.sh
+
