Anado el directio pensado para ser usado con clang. Esta mas que nada pensando para las github actions mas que para que lo usemos nosotros
Signed-off-by: Tomas Fabrizio Orsi <torsi@fi.uba.ar>

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,6 @@ _deps
 DartConfiguration.tcl
 
 # Ignoro los binarios producidos
-build/server
-build/client
-build/test*
+build*/server
+build*/client
+build*/test*
