--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -25,27 +25,30 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Configure CMake
-      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+        # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
+        # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
+        run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
     - name: Build Server
-      # Build your program with the given configuration
-      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} --target server -- -k
+        if: always()
+        # Build your program with the given configuration
+        run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} --target server -- -k
 
     - name: Build Client
-      # Build your program with the given configuration
-      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} --target client -- -k
+        if: always()
+        # Build your program with the given configuration
+        run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} --target client -- -k
 
     - name: Build todo
-      # Build your program with the given configuration
-      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} -- -k
+        if: always()
+        # Build your program with the given configuration
+        run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} -- -k
 
     - name: Test
-      working-directory: ${{github.workspace}}/build
-      # Execute tests defined by the CMake configuration.
-      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ctest -C ${{env.BUILD_TYPE}}
+        working-directory: ${{github.workspace}}/build
+        # Execute tests defined by the CMake configuration.
+        # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
+        run: ctest -C ${{env.BUILD_TYPE}}
 
   buildClang:
     # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
@@ -62,40 +65,43 @@ jobs:
       run: CXX=/usr/lib/llvm/16/bin/clang++ cmake -B ${{github.workspace}}/buildClang -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
     - name: Build Server
-      # Build your program with the given configuration
-      run: cmake --build ${{github.workspace}}/buildClang --config ${{env.BUILD_TYPE}} --target server -- -k
+        if: always()
+        # Build your program with the given configuration
+        run: cmake --build ${{github.workspace}}/buildClang --config ${{env.BUILD_TYPE}} --target server -- -k
 
     - name: Build Client
-      # Build your program with the given configuration
-      run: cmake --build ${{github.workspace}}/buildClang --config ${{env.BUILD_TYPE}} --target client -- -k
+        if: always()
+        # Build your program with the given configuration
+        run: cmake --build ${{github.workspace}}/buildClang --config ${{env.BUILD_TYPE}} --target client -- -k
 
     - name: Build todo junto
-      # Build your program with the given configuration
-      run: cmake --build ${{github.workspace}}/buildClang --config ${{env.BUILD_TYPE}} -- -k
+        if: always()
+        # Build your program with the given configuration
+        run: cmake --build ${{github.workspace}}/buildClang --config ${{env.BUILD_TYPE}} -- -k
 
     - name: Test
-      working-directory: ${{github.workspace}}/buildClang
-      # Execute tests defined by the CMake configuration.
-      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ctest -C ${{env.BUILD_TYPE}}
+        working-directory: ${{github.workspace}}/buildClang
+        # Execute tests defined by the CMake configuration.
+        # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
+        run: ctest -C ${{env.BUILD_TYPE}}
 
-  todos:
-    runs-on: self-hosted
+    TODOs:
+        runs-on: self-hosted
 
-    steps:
-    - uses: actions/checkout@v3
+        steps:
+        - uses: actions/checkout@v3
 
-    - name: Cuento la cantidad de TODOS
+        - name: Cuento la cantidad de TODOS
 
-      run: sh ./build/grepearTodos.sh
+        run: sh ./build/grepearTodos.sh
 
-  cppcheck:
-    runs-on: self-hosted
+    cppcheck:
+        runs-on: self-hosted
 
-    steps:
-    - uses: actions/checkout@v3
+        steps:
+        - uses: actions/checkout@v3
 
-    - name: Cppcheck es solo una herramienta. Nadie nos obliga a esucharla. <Ni dioses ni reyes> - Andrew Ryan
+        - name: Cppcheck es solo una herramienta. Nadie nos obliga a esucharla. <Ni dioses ni reyes> - Andrew Ryan
 
       run: sh ./build/cppcheck.sh
 
