Refactorización de cliente y menú
Se añaderon las clases cliente y menú para no hacer todo en el main.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,6 +92,8 @@ add_executable(client
   "${CLIENTDIR}/entradateclado.cpp"
   "${CLIENTDIR}/enviador.cpp"
   "${CLIENTDIR}/recibidor.cpp"
+  "${CLIENTDIR}/cliente.cpp"
+  "${CLIENTDIR}/menu.cpp"
 
   # Socket
   "${COMMONDIR}/resolvererror.cpp"
