Primera implementación de animaciones
Se introdujo una versión sencilla de animación de caminata.
La aplicación aún es incosistente y genera algunos errores en salida. Hay que encontrar esos casos y manejarlos acordemente.
Por lo que veo los únicos leaks en memoria que ocurren consistentemente puede que sean bugs del mismo valgrind (falsos positivos), preguntar.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -94,6 +94,7 @@ add_executable(client
   "${CLIENTDIR}/recibidor.cpp"
   "${CLIENTDIR}/cliente.cpp"
   "${CLIENTDIR}/menu.cpp"
+  "${CLIENTDIR}/animacion.cpp"
 
   # Socket
   "${COMMONDIR}/resolvererror.cpp"
