--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,10 @@ _deps
 # Pero que demonios
 DartConfiguration.tcl
 
+# Archivos de tiburoncin
+AtoB.dump
+BtoA.dump
+
 # Ignoro los binarios producidos
 build*/server
 build*/client
