Revivo la clase cliente. Hacemos que la clase cliente tenga un jugador. La logica de lobby en jugador se mueve a reciever. Borro archivo 'comunes' porque no se usa (y esta unificado con defs). Añadi cliente al CMake. Comento codigo de aceptador porque hay que arreglarlo. (esta bastante roto todo el codigo ngl, pero asi son los refactors grandes, creo..)
Co-authored-by: Tomas Fabrizio Orsi <torsi@fi.uba.ar>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,7 +86,7 @@ include_directories("${COMMONDIR}")
 add_executable(server
   "${SERVERDIR}/main.cpp"
   "${SERVERDIR}/server.cpp"
-  # "${SERVERDIR}/cliente.cpp"
+  "${SERVERDIR}/cliente.cpp"
   "${SERVERDIR}/jugador.cpp"
   "${SERVERDIR}/partida.cpp"
   "${SERVERDIR}/gusano.cpp"
