--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -109,3 +109,14 @@ jobs:
 
       run: sh ./build/cppcheck.sh
 
+  include-what-you-use:
+    runs-on: self-hosted
+
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: include-what-you-use es para limpiar un poco los archivos de los includes
+
+      working-directory: ${{github.workspace}}/build
+
+      run: iwyu_tool.py -p .
