--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -119,4 +119,7 @@ jobs:
 
       working-directory: ${{github.workspace}}/build
 
+      # Genero el compile_commands
+      run: cmake ../
+
       run: iwyu_tool.py -p .
