Pongo todo en un solo comando
Signed-off-by: Tomas Fabrizio Orsi <torsi@fi.uba.ar>

--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -120,6 +120,4 @@ jobs:
       working-directory: ${{github.workspace}}/build
 
       # Genero el compile_commands
-      run: cmake ../
-
-      run: iwyu_tool.py -p .
+      run: cmake ../ ; iwyu_tool.py -p .
