--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -109,15 +109,15 @@ jobs:
 
       run: sh ./build/cppcheck.sh
 
-  include-what-you-use:
-    runs-on: self-hosted
+  # include-what-you-use:
+  #   runs-on: self-hosted
 
-    steps:
-    - uses: actions/checkout@v3
+  #   steps:
+  #   - uses: actions/checkout@v3
 
-    - name: include-what-you-use es para limpiar un poco los archivos de los includes
+  #   - name: include-what-you-use es para limpiar un poco los archivos de los includes
 
-      working-directory: ${{github.workspace}}/build
+  #     working-directory: ${{github.workspace}}/build
 
-      # Genero el compile_commands
-      run: cmake ../ ; iwyu_tool.py -p .
+  #     # Genero el compile_commands
+  #     run: cmake ../ ; iwyu_tool.py -p .
