Cambio el nombre del archivo de configuracion y agrego configuracion de gusanos

--- a/src/common/config.yaml
+++ b/src/common/config.yaml
@@ -134,3 +134,7 @@ Teletransportación:
     Epicentro: 0
     Radio: 0
   Cantidad de fragmentos: 0
+
+
+# # Caracteristicas de gusano # #
+Vida: 50
