Refactorización grande de Acciones/Comandos y primera implementación de cámara
Se cambiaron las acciónes y comandos por clases polimórficas. Los struct comandos
podrían ser reemplazados por enums más específicos.
Se hizo una primera implementación de cámara, aún no funciona correctamente.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,6 +97,8 @@ add_executable(client
   "${CLIENTDIR}/cliente.cpp"
   "${CLIENTDIR}/menu.cpp"
   "${CLIENTDIR}/animacion.cpp"
+  "${CLIENTDIR}/camara.cpp"
+  "${CLIENTDIR}/accioncliente.cpp"
 
   # Socket
   "${COMMONDIR}/resolvererror.cpp"
