Cambiamos un poco la base de arma. Agregamos representacion arma (se va a usar en un futuro)
Co-authored-by: Tomas Fabrizio Orsi <torsi@fi.uba.ar>

--- a/src/common/config.yaml
+++ b/src/common/config.yaml
@@ -109,6 +109,7 @@ Bate de Baseball:
     Radio: 0
   Cantidad de fragmentos: 0
 
+# Agregar cant de misiles
 Ataque Aereo:
   Arma con mira: false
   Combate cuerpo a cuerpo: false
