Refactor de animaciones, clase "Dibujador"
Se introdujo una clase dibujador que inicializa todas las
animaciones en un mapa.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -130,6 +130,7 @@ add_executable(client
   "${CLIENTDIR}/animacion.cpp"
   "${CLIENTDIR}/camara.cpp"
   "${CLIENTDIR}/accioncliente.cpp"
+  "${CLIENTDIR}/dibujador.cpp"
 
   # Socket
   "${COMMONDIR}/resolvererror.cpp"
